some PF components ID names renamed, fixed issue with "circulating_supply" and "total_supply" null values

--- a/crypfolio/web/faces/portfolio-add-item.xhtml
+++ b/crypfolio/web/faces/portfolio-add-item.xhtml
@@ -316,8 +316,8 @@
                                                          actionListener="#{transactionsBacking.doSubmitAddTransaction}"
                                                          update="mainTabView:portfolioMainData mainTabView:portfolioDataTableForm
                                                                     mainTabView:archiveDataTableWV
-                                                                    mainTabView:formItemDetails:itemDetails
-                                                                    mainTabView:formItemDetails:panelgrid-items-details-transactions
+                                                                    mainTabView:formItemDetails
+                                                                    mainTabView:formItemTransactions
                                                                     growl"
                                                          oncomplete="PF('dlgPortfolioAddItem').hide(); portfolioDataTableRowUnselect();"
                                                          value="Done"
