--- a/crypfolio/web/faces/item.xhtml
+++ b/crypfolio/web/faces/item.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <!--            =====================               modal window PORTFOLIO: ADD NEW ITEM -->
+    <!--   ITEM   MODAL   WINDOW   -->
     <div id="divItemDetails">
 
         <p:dialog header="Item details" id="dlgItemDetails" widgetVar="dlgItemDetails" modal="true"
@@ -14,11 +14,12 @@
                   class="modal-window-item-details">
 
             <p:scrollPanel mode="native" style="width:100%; overflow-y: scroll; height: 92%;">
-                <h:form id="formItemDetails">
 
-                    <div class="ui-g" style="border: 1px solid green;">
+                <div class="ui-g" style="border: 1px solid green;">
 
-                        <div class="ui-g-12 ui-md-6 ui-lg-3" style="border: 1px solid red; padding: 0 !important;">
+                    <div class="ui-g-12 ui-md-6 ui-lg-3" style="border: 1px solid red; padding: 0 !important;">
+
+                        <h:form id="formItemDetails">
 
                             <p:panelGrid styleClass="panelgrid-items-details" id="itemDetails"
                                          style="border:none; margin:0 auto; width:100%;">
@@ -57,6 +58,7 @@
                                             <f:convertNumber type="number" pattern="###,###.########"
                                                              locale="en_US"/>
                                         </h:outputText>
+                                        <h:outputText value=" #{itemBacking.selectedItem.coin.symbol}"/>
                                     </p:column>
                                 </p:row>
 
@@ -186,10 +188,15 @@
                                     </p:column>
                                     <p:column>
                                         <h:outputText
+                                                rendered="#{itemBacking.getCoinCirculatingSupply(itemBacking.selectedItem) gt 0}"
                                                 value="#{itemBacking.getCoinCirculatingSupply(itemBacking.selectedItem)}">
                                             <f:convertNumber type="number" pattern="###,###.########"
                                                              locale="en_US"/>
                                         </h:outputText>
+                                        <h:outputText
+                                                rendered="#{itemBacking.getCoinCirculatingSupply(itemBacking.selectedItem) le 0}"
+                                                value="?"/>
+
                                         <h:outputText value=" #{itemBacking.selectedItem.coin.symbol}"/>
                                     </p:column>
                                 </p:row>
@@ -202,10 +209,15 @@
                                     </p:column>
                                     <p:column>
                                         <h:outputText
+                                                rendered="#{itemBacking.getCoinTotalSupply(itemBacking.selectedItem) gt 0}"
                                                 value="#{itemBacking.getCoinTotalSupply(itemBacking.selectedItem)}">
                                             <f:convertNumber type="number" pattern="###,###.########"
                                                              locale="en_US"/>
                                         </h:outputText>
+                                        <h:outputText
+                                                rendered="#{itemBacking.getCoinTotalSupply(itemBacking.selectedItem) le 0}"
+                                                value="?"/>
+
                                         <h:outputText value=" #{itemBacking.selectedItem.coin.symbol}"/>
                                     </p:column>
                                 </p:row>
@@ -242,7 +254,7 @@
 
                                             <p:ajax event="change" process="@this"
                                                     listener="#{itemBacking.changeItemShowedCurrency}"
-                                                    update="itemDetails"/>
+                                                    update="@form"/>
 
                                         </p:selectOneButton>
 
@@ -284,37 +296,41 @@
 
                             </p:panelGrid>
 
-                        </div>
+                        </h:form>
 
-                        <div class="ui-g-12 ui-md-6 ui-lg-9" style="border: 1px solid red; padding: 0 !important;">
+                    </div>
 
-                            <h:graphicImage value="#{resource['images/trading-view-widget-example.png']}"
-                                            style="display: block; margin: auto;"/>
+                    <div class="ui-g-12 ui-md-6 ui-lg-9" style="border: 1px solid red; padding: 0 !important;">
 
-                            <!-- TradingView Widget BEGIN -->
-                            <!--                                <div class="tradingview-widget-container">
-                                                                <div id="tradingview_94bde"></div>
-                                                                <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-                                                                <script type="text/javascript">
-                                                                    new TradingView.widget(
-                                                                        {
-                                                                            "width": 640,
-                                                                            "height": 400,
-                                                                            "symbol": "NASDAQ:AAPL",
-                                                                            "interval": "D",
-                                                                            "timezone": "Etc/UTC",
-                                                                            "theme": "Light",
-                                                                            "style": "1",
-                                                                            "locale": "en",
-                                                                            "toolbar_bg": "#f1f3f6",
-                                                                            "enable_publishing": false,
-                                                                            "allow_symbol_change": true,
-                                                                            "container_id": "tradingview_94bde"
-                                                                        }
-                                                                    );
-                                                                </script>
-                                                            </div>-->
-                            <!-- TradingView Widget END -->
+                        <h:graphicImage value="#{resource['images/trading-view-widget-example.png']}"
+                                        style="display: block; margin: auto;"/>
+
+                        <!-- TradingView Widget BEGIN -->
+                        <!--                                <div class="tradingview-widget-container">
+                                                            <div id="tradingview_94bde"></div>
+                                                            <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+                                                            <script type="text/javascript">
+                                                                new TradingView.widget(
+                                                                    {
+                                                                        "width": 640,
+                                                                        "height": 400,
+                                                                        "symbol": "NASDAQ:AAPL",
+                                                                        "interval": "D",
+                                                                        "timezone": "Etc/UTC",
+                                                                        "theme": "Light",
+                                                                        "style": "1",
+                                                                        "locale": "en",
+                                                                        "toolbar_bg": "#f1f3f6",
+                                                                        "enable_publishing": false,
+                                                                        "allow_symbol_change": true,
+                                                                        "container_id": "tradingview_94bde"
+                                                                    }
+                                                                );
+                                                            </script>
+                                                        </div>-->
+                        <!-- TradingView Widget END -->
+
+                        <h:form id="formItemTransactions">
 
                             <p:panelGrid style="margin:0 auto; width:100%;">
 
@@ -339,7 +355,7 @@
 
                                 <p:row>
                                     <p:column>
-                                        <p:dataTable id="panelgrid-items-details-transactions"
+                                        <p:dataTable id="itemTransactionsDataTableWV"
                                                      value="#{itemBacking.selectedItem.transactions}"
                                                      var="transactionEntity">
 
@@ -406,7 +422,10 @@
 
                                                     <p:menuitem value="Edit" action="#{itemBacking.getRowKey(1)}"/>
 
-                                                    <p:menuitem value="Delete" action="#{itemBacking.getRowKey(1)}">
+                                                    <p:menuitem value="Delete"
+                                                                process="@this"
+                                                                action="#{itemBacking.doSubmitDeleteTransaction(transactionEntity)}"
+                                                                update="@form mainTabView:formItemDetails">
                                                         <p:confirm header="DELETE TRANSACTION"
                                                                    message="Are you sure you want to delete this transaction?"
                                                                    icon="ui-icon-alert"/>
@@ -419,108 +438,24 @@
                                     </p:column>
                                 </p:row>
 
-                                <p:row colspan="2">
-                                    <p:column>
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-
-                                        <h:outputText value="right"
-                                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-                                    </p:column>
-                                </p:row>
-
                             </p:panelGrid>
 
-                        </div>
-
+                        </h:form>
 
                     </div>
 
-                    <div style="border: 1px solid blue; " class="flex-space-between">
-                        <h:outputText value="left"
-                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
+                </div>
+
+                <div style="border: 1px solid blue; " class="flex-space-between">
+                    <h:outputText value="left"
+                                  style="padding: 5px 0 0 20px; font-weight: bold; display: block;
                                                           text-transform: uppercase;"/>
 
-                        <h:outputText value="right"
-                                      style="padding: 5px 0 0 20px; font-weight: bold; display: block;
+                    <h:outputText value="right"
+                                  style="padding: 5px 0 0 20px; font-weight: bold; display: block;
                                                           text-transform: uppercase;"/>
-                    </div>
+                </div>
 
-                </h:form>
             </p:scrollPanel>
 
             <!--//remove highlight background color of selected row after closed dialog window-->
