recount portfolio net costs on update currency && user page "main logo" link changed to "user.xhtml"

--- a/crypfolio/web/faces/user.xhtml
+++ b/crypfolio/web/faces/user.xhtml
@@ -15,7 +15,7 @@
 
         <div class="left">
 
-            <h:link outcome="/faces/login.xhtml">
+            <h:link outcome="/faces/user.xhtml">
 
                 <h:graphicImage name="images/logo_small.png" alt="Crypfolio :: a new crypto portfolio" width="192"
                                 height="43"/>
