--- a/crypfolio/web/faces/item.xhtml
+++ b/crypfolio/web/faces/item.xhtml
@@ -10,10 +10,8 @@
 
         <p:dialog header="Item details" id="dlgItemDetails" widgetVar="dlgItemDetails" modal="true"
                   resizable="false" draggable="false" position="bottom" closeOnEscape="true"
-                  hideEffect="fade"
+                  hideEffect="fade" height="91%" width="100%"
                   class="modal-window-item-details">
-
-            <p:scrollPanel mode="native" style="width:100%; overflow-y: scroll; height: 92%;">
 
                 <div class="ui-g" style="border: 1px solid green;">
 
@@ -301,7 +299,7 @@
                     <div class="ui-g-12 ui-md-6 ui-lg-9" style="border: 1px solid red; padding: 0 !important;">
 
                         <h:graphicImage value="#{resource['images/trading-view-widget-example.png']}"
-                                        style="display: block; margin: auto; height: 200px;"/>
+                                        style="display: block; margin: auto; height: 400px;"/>
 
                         <!-- TradingView Widget BEGIN -->
                         <!--                                <div class="tradingview-widget-container">
@@ -423,7 +421,7 @@
 
                                                     <p:menuitem value="Delete"
                                                                 action="#{itemBacking.doSubmitDeleteTransaction(transactionEntity)}"
-                                                                update="@form mainTabView:formItemDetails">
+                                                                update="@form mainTabView:formItemDetails growl">
 
                                                         <p:confirm header="DELETE TRANSACTION"
                                                                    message="Are you sure you want to delete this transaction?"
@@ -445,18 +443,6 @@
                     </div>
 
                 </div>
-
-                <div style="border: 1px solid blue; " class="flex-space-between">
-                    <h:outputText value="left"
-                                  style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-
-                    <h:outputText value="right"
-                                  style="padding: 5px 0 0 20px; font-weight: bold; display: block;
-                                                          text-transform: uppercase;"/>
-                </div>
-
-            </p:scrollPanel>
 
             <!--//remove highlight background color of selected row after closed dialog window-->
             <p:ajax event="close" oncomplete="portfolioDataTableRowUnselect();" resetValues="true"
