- created universal method to recount prices with respect to the historical prices of USD/EUR/BTC/ETH - implemented "transaction edit" functionality

--- a/crypfolio/web/faces/item.xhtml
+++ b/crypfolio/web/faces/item.xhtml
@@ -421,7 +421,7 @@
                                                             action="#{transactionsBacking.createEntitiesForEdition(transactionEntity)}"
                                                             onclick="PF('dlgPortfolioAddItem').show(); changeDlgPortfolioAddItemTitle('editTransaction');"
                                                             update="mainTabView:formPortfolioAddItem-coin
-                                                                    mainTabView:formPortfolioAddItem-transaction"/>
+                                                                    mainTabView:formPortfolioAddItem-transaction growl"/>
 
                                                 <p:menuitem value="Delete"
                                                             action="#{itemBacking.doSubmitDeleteTransaction(transactionEntity)}"
